--- a/PiPL.rc
+++ b/PiPL.rc
@@ -31,6 +31,17 @@
 
 #define NULLID 0L
 
+#define doesSupportBitmap           128 // flagSupportsBitmap
+#define doesSupportGrayScale         64 // flagSupportsGrayScale
+#define doesSupportIndexedColor      32 // flagSupportsIndexedColor
+#define doesSupportRGBColor          16 // flagSupportsRGBColor
+#define doesSupportCMYKColor          8 // flagSupportsCMYKColor
+#define doesSupportHSLColor           4 // flagSupportsHSLColor
+#define doesSupportHSBColor           2 // flagSupportsHSBColor
+#define doesSupportMultichannel       1 // flagSupportsMultichannel
+#define doesSupportDuotone        32768 // (flagSupportsDuotone << 8)    RC doesn't know <<8, nor *256 !
+#define doesSupportLABColor       16384 // (flagSupportsLABColor << 8)   RC doesn't know <<8, nor *256 !
+
 /* Note: make_win.c writes language 0. So, this should be language 0, too,
    otherwise the standalone filter would have 2 languages for this resource. */
 LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
@@ -38,7 +49,7 @@ LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
 BEGIN
 	0x0001,     /* Reserved (for Photoshop) */
 	0L,         /* kCurrentPiPLVersion */
-	13L,        /* Property Count */
+	14L,        /* Property Count */
 
 	VENDORID, LC(c,a,t,g), NULLID, 16L, "\014Telegraphics\0\0\0",    /* PString */
 	VENDORID, LC(n,a,m,e), NULLID, 20L, "\021Filter Foundry...\0\0", /* PString */
@@ -64,13 +75,13 @@ BEGIN
 		VENDORID, LC(w,x,8,6), NULLID, 12L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
 	#endif
 
+	// Here come 8 properties: kind, vers, prty, mode, ms32, flly, enbl, fici
+	#include "PiPL_body.rc"
+
 	/* Object Identifier attribute */
 	/* Note that 'ViaT' is not a official creator code for ViaThinkSoft and it is unclear where a creator code can be aquired from... */
 	/* Note: Length 24 must be divisible by 4 */
 	LC(V,i,a,T), LC(O,b,I,d), NULLID, 24L, "1.3.6.1.4.1.37476.2.72\0\0",
-
-	#include "PiPL_body.rc"
-
 END
 
 LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
@@ -78,8 +89,10 @@ LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
 BEGIN
 	0x0001,       /* Reserved (for Photoshop) */
 	0L,           /* kCurrentPiPLVersion */
-	8L,           /* Property Count */
+	9L,           /* Property Count */
 	VENDORID, LC(w,x,8,6), NULLID, 12L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
+
+	// Here come 8 properties: kind, vers, prty, mode, ms32, flly, enbl, fici
 	#include "PiPL_body.rc"
 END
 
@@ -88,7 +101,9 @@ LANGUAGE LANG_NEUTRAL,SUBLANG_NEUTRAL
 BEGIN
 	0x0001,       /* Reserved (for Photoshop) */
 	0L,           /* kCurrentPiPLVersion */
-	8L,           /* Property Count */
+	9L,           /* Property Count */
 	VENDORID, LC(8,6,6,4), NULLID, 12L, "PluginMain\0\0",  /* Entrypoint Name (Long Word padded C String) */
+
+	// Here come 8 properties: kind, vers, prty, mode, ms32, flly, enbl, fici
 	#include "PiPL_body.rc"
 END
