Fixed issue with German special characters
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@523 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/ui_win.rc
+++ b/ui_win.rc
@@ -18,6 +18,8 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
+// Attention: Please save this file as UTF-8 without BOM!
+
 /* Windows UI resources */
 
 #include "winuser.h"
