--- a/win_res.rc
+++ b/win_res.rc
@@ -20,8 +20,13 @@
 
 /* wrapper file for Windows resource compiler input */
 
-// TODO: OpenWatcom doesn't like this!
-//       Bugreport: https://github.com/open-watcom/open-watcom-v2/issues/863
+// This pragma is ignored by OpenWatcom
+// If language.h and ui_win.rc are UTF-8 (without BOM):
+// => MSVC++ requires this pragma to be set to code page 65001
+// => OpenWatcom requires setting "-zku8"
+// If language.h and ui_win.rc are ANSI encoded:
+// => MSVC++ requires this pragma to be MISSING
+// => OpenWatcom requires setting "Single byte characters only"
 #pragma code_page(65001)
 
 #include "Scripting.rc"
