--- a/PiPL.rc
+++ b/PiPL.rc
@@ -54,14 +54,14 @@ BEGIN
 	VENDORID, LC(c,a,t,g), NULLID, 16L, "\014Telegraphics\0\0\0",    /* PString */
 	VENDORID, LC(n,a,m,e), NULLID, 20L, "\021Filter Foundry...\0\0", /* PString */
 
-	/* "Component". Values taken from Clouds.8BF */
+	/* Component { MainComponentVersion, "Filter Foundry" }, */
 	/* Note: Length 20 must be divisible by 4 */
-	VENDORID, LC(c,m,p,t), NULLID, 20L, MainComponentVersion, "Filter Foundry\0\0",
+	VENDORID, LC(c,m,p,t), NULLID, 20L, MainComponentVersion, "Filter Foundry\0\0", /* CString */
 
-	/* HasTerminology { plugInClassID, plugInEventID, AETE_ID, vendorName " " plugInName }, */
+	/* HasTerminology { plugInClassID, plugInEventID, AETE_ID, ""  }, */
 	VENDORID, LC(h,s,t,m), NULLID, 16L, /* = 3*4 + 2 + sizeof(c string) + padding */
 	0L,                /* version */
-	LC(F,l,t,r),       /* Class ID, always required.  Must be eventFilter='Fltr' to show up in "Actions" tab. */
+	LC(F,l,t,r),       /* Class ID, always required.  Must be eventFilter='Fltr' to show up in "Actions" tab. (PITerminology.h:eventFilter) */
 	LC(f,i,F,o),       /* Event ID, or typeNULL if not Filter/Color Picker/Selection. */
 	AETE_ID,           /* Dictionary ('AETE') resource ID. (only 2 bytes long!) */
 	/*"Telegraphics FilterFoundry\0\0\0\0"*/
@@ -79,7 +79,7 @@ BEGIN
 	#include "PiPL_body.rc"
 
 	/* Object Identifier attribute */
-	/* Note that 'ViaT' is not a official creator code for ViaThinkSoft and it is unclear where a creator code can be aquired from... */
+	/* Note that 'ViaT' is not an official creator code for ViaThinkSoft and it is unclear where a creator code can be aquired from... */
 	/* Note: Length 24 must be divisible by 4 */
 	LC(V,i,a,T), LC(O,b,I,d), NULLID, 24L, "1.3.6.1.4.1.37476.2.72\0\0",
 END
