Implemented reading of FFL files (actually, they will be only extracted, so they can be read afterwards)
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@544 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/language_win.rc
+++ b/language_win.rc
@@ -85,6 +85,9 @@ STRINGTABLE
 	MSG_OPEN_GUF_ID, MSG_OPEN_GUF_ENUS
 	MSG_SAVE_GUF_ID, MSG_SAVE_GUF_ENUS
 	MSG_INCOMPATIBLE_GUF_FILE_ID, MSG_INCOMPATIBLE_GUF_FILE_ENUS
+	MSG_OPEN_FFL_ID, MSG_OPEN_FFL_ENUS
+	MSG_FFL_CONVERTED_ID, MSG_FFL_CONVERTED_ENUS
+
 }
 
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
@@ -152,5 +155,7 @@ STRINGTABLE
 	MSG_OPEN_GUF_ID, MSG_OPEN_GUF_DEDE
 	MSG_SAVE_GUF_ID, MSG_SAVE_GUF_DEDE
 	MSG_INCOMPATIBLE_GUF_FILE_ID, MSG_INCOMPATIBLE_GUF_FILE_DEDE
+	MSG_OPEN_FFL_ID, MSG_OPEN_FFL_DEDE
+	MSG_FFL_CONVERTED_ID, MSG_FFL_CONVERTED_DEDE
 
 }
