More code simplifications: Save-methods return a message ID instead of just Boolean
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@555 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/language_win.rc
+++ b/language_win.rc
@@ -38,7 +38,7 @@ STRINGTABLE
 	MSG_CANNOT_OPEN_FILE_ID, MSG_CANNOT_OPEN_FILE_ENUS
 	MSG_CANNOT_CREATE_FILE_ID, MSG_CANNOT_CREATE_FILE_ENUS
 	MSG_EXPRESSION1024_FOUND_ID, MSG_EXPRESSION1024_FOUND_ENUS
-	MSG_EXPRESSION_OOM_ID, MSG_EXPRESSION_OOM_ENUS
+	MSG_OUT_OF_MEMORY_ID, MSG_OUT_OF_MEMORY_ENUS
 	MSG_FILTERS_UNLIMITED_WARNING_ID, MSG_FILTERS_UNLIMITED_WARNING_ENUS
 	MSG_FORMULA_IR_1023_TRUNCATED_ID, MSG_FORMULA_IR_1023_TRUNCATED_ENUS
 	MSG_FORMULA_R_1023_TRUNCATED_ID, MSG_FORMULA_R_1023_TRUNCATED_ENUS
@@ -87,6 +87,11 @@ STRINGTABLE
 	MSG_INCOMPATIBLE_GUF_FILE_ID, MSG_INCOMPATIBLE_GUF_FILE_ENUS
 	MSG_OPEN_FFL_ID, MSG_OPEN_FFL_ENUS
 	MSG_FFL_CONVERTED_ID, MSG_FFL_CONVERTED_ENUS
+	MSG_INVALID_FILE_SIGNATURE_ID, MSG_INVALID_FILE_SIGNATURE_ENUS
+	MSG_FFL_NO_FILTERS_DETECTED_ID, MSG_FFL_NO_FILTERS_DETECTED_ENUS
+	MSG_ERROR_GENERATING_DATA_ID, MSG_ERROR_GENERATING_DATA_ENUS
+	MSG_UNSUPPORTED_FILE_FORMAT_ID, MSG_UNSUPPORTED_FILE_FORMAT_ENUS
+
 
 }
 
@@ -108,7 +113,7 @@ STRINGTABLE
 	MSG_CANNOT_OPEN_FILE_ID, MSG_CANNOT_OPEN_FILE_DEDE
 	MSG_CANNOT_CREATE_FILE_ID, MSG_CANNOT_CREATE_FILE_DEDE
 	MSG_EXPRESSION1024_FOUND_ID, MSG_EXPRESSION1024_FOUND_DEDE
-	MSG_EXPRESSION_OOM_ID, MSG_EXPRESSION_OOM_DEDE
+	MSG_OUT_OF_MEMORY_ID, MSG_OUT_OF_MEMORY_DEDE
 	MSG_FILTERS_UNLIMITED_WARNING_ID, MSG_FILTERS_UNLIMITED_WARNING_DEDE
 	MSG_FORMULA_IR_1023_TRUNCATED_ID, MSG_FORMULA_IR_1023_TRUNCATED_DEDE
 	MSG_FORMULA_R_1023_TRUNCATED_ID, MSG_FORMULA_R_1023_TRUNCATED_DEDE
@@ -157,5 +162,9 @@ STRINGTABLE
 	MSG_INCOMPATIBLE_GUF_FILE_ID, MSG_INCOMPATIBLE_GUF_FILE_DEDE
 	MSG_OPEN_FFL_ID, MSG_OPEN_FFL_DEDE
 	MSG_FFL_CONVERTED_ID, MSG_FFL_CONVERTED_DEDE
+	MSG_INVALID_FILE_SIGNATURE_ID, MSG_INVALID_FILE_SIGNATURE_DEDE
+	MSG_FFL_NO_FILTERS_DETECTED_ID, MSG_FFL_NO_FILTERS_DETECTED_DEDE
+	MSG_ERROR_GENERATING_DATA_ID, MSG_ERROR_GENERATING_DATA_DEDE
+	MSG_UNSUPPORTED_FILE_FORMAT_ID, MSG_UNSUPPORTED_FILE_FORMAT_DEDE
 
 }
