--- a/ui_win.rc
+++ b/ui_win.rc
@@ -63,14 +63,14 @@ BEGIN
 	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
 	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,                "FoundrySlider", 0,  154,10, 105,10
-	CONTROL         "",FIRSTCTLITEM+1,              "FoundrySlider", 0,  154,25, 105,10
-	CONTROL         "",FIRSTCTLITEM+2,              "FoundrySlider", 0,  154,40, 105,10
-	CONTROL         "",FIRSTCTLITEM+3,              "FoundrySlider", 0,  154,55, 105,10
-	CONTROL         "",FIRSTCTLITEM+4,              "FoundrySlider", 0,  154,70, 105,10
-	CONTROL         "",FIRSTCTLITEM+5,              "FoundrySlider", 0,  154,85, 105,10
-	CONTROL         "",FIRSTCTLITEM+6,              "FoundrySlider", 0,  154,100, 105,10
-	CONTROL         "",FIRSTCTLITEM+7,              "FoundrySlider", 0,  154,115, 105,10
+	CONTROL         "",FIRSTCTLITEM,                "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,10, 105,10
+	CONTROL         "",FIRSTCTLITEM+1,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,25, 105,10
+	CONTROL         "",FIRSTCTLITEM+2,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,40, 105,10
+	CONTROL         "",FIRSTCTLITEM+3,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,55, 105,10
+	CONTROL         "",FIRSTCTLITEM+4,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,70, 105,10
+	CONTROL         "",FIRSTCTLITEM+5,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,85, 105,10
+	CONTROL         "",FIRSTCTLITEM+6,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 105,10
+	CONTROL         "",FIRSTCTLITEM+7,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 105,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,               273, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,             273, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -128,14 +128,14 @@ BEGIN
 	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
 	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,                "FoundrySlider", 0,  154,10, 105,10
-	CONTROL         "",FIRSTCTLITEM+1,              "FoundrySlider", 0,  154,25, 105,10
-	CONTROL         "",FIRSTCTLITEM+2,              "FoundrySlider", 0,  154,40, 105,10
-	CONTROL         "",FIRSTCTLITEM+3,              "FoundrySlider", 0,  154,55, 105,10
-	CONTROL         "",FIRSTCTLITEM+4,              "FoundrySlider", 0,  154,70, 105,10
-	CONTROL         "",FIRSTCTLITEM+5,              "FoundrySlider", 0,  154,85, 105,10
-	CONTROL         "",FIRSTCTLITEM+6,              "FoundrySlider", 0,  154,100, 105,10
-	CONTROL         "",FIRSTCTLITEM+7,              "FoundrySlider", 0,  154,115, 105,10
+	CONTROL         "",FIRSTCTLITEM,                "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,10, 105,10
+	CONTROL         "",FIRSTCTLITEM+1,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,25, 105,10
+	CONTROL         "",FIRSTCTLITEM+2,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,40, 105,10
+	CONTROL         "",FIRSTCTLITEM+3,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,55, 105,10
+	CONTROL         "",FIRSTCTLITEM+4,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,70, 105,10
+	CONTROL         "",FIRSTCTLITEM+5,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,85, 105,10
+	CONTROL         "",FIRSTCTLITEM+6,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 105,10
+	CONTROL         "",FIRSTCTLITEM+7,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 105,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,               273, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,             273, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -198,14 +198,14 @@ BEGIN
 	LTEXT           "map(2)",FIRSTMAPLABELITEM+2,   129, 78, 25,12
 	LTEXT           "map(3)",FIRSTMAPLABELITEM+3,   129,108, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,    "FoundrySlider", 0,  154, 10, 100,10
-	CONTROL         "",FIRSTCTLITEM+1,  "FoundrySlider", 0,  154, 25, 100,10
-	CONTROL         "",FIRSTCTLITEM+2,  "FoundrySlider", 0,  154, 40, 100,10
-	CONTROL         "",FIRSTCTLITEM+3,  "FoundrySlider", 0,  154, 55, 100,10
-	CONTROL         "",FIRSTCTLITEM+4,  "FoundrySlider", 0,  154, 70, 100,10
-	CONTROL         "",FIRSTCTLITEM+5,  "FoundrySlider", 0,  154, 85, 100,10
-	CONTROL         "",FIRSTCTLITEM+6,  "FoundrySlider", 0,  154,100, 100,10
-	CONTROL         "",FIRSTCTLITEM+7,  "FoundrySlider", 0,  154,115, 100,10
+	CONTROL         "",FIRSTCTLITEM,    "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 10, 100,10
+	CONTROL         "",FIRSTCTLITEM+1,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 25, 100,10
+	CONTROL         "",FIRSTCTLITEM+2,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 40, 100,10
+	CONTROL         "",FIRSTCTLITEM+3,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 55, 100,10
+	CONTROL         "",FIRSTCTLITEM+4,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 70, 100,10
+	CONTROL         "",FIRSTCTLITEM+5,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 85, 100,10
+	CONTROL         "",FIRSTCTLITEM+6,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 100,10
+	CONTROL         "",FIRSTCTLITEM+7,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 100,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,     269, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,   269, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -250,14 +250,14 @@ BEGIN
 	LTEXT           "map(2)",FIRSTMAPLABELITEM+2,   129, 78, 25,12
 	LTEXT           "map(3)",FIRSTMAPLABELITEM+3,   129,108, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,    "FoundrySlider", 0,  154, 10, 100,10
-	CONTROL         "",FIRSTCTLITEM+1,  "FoundrySlider", 0,  154, 25, 100,10
-	CONTROL         "",FIRSTCTLITEM+2,  "FoundrySlider", 0,  154, 40, 100,10
-	CONTROL         "",FIRSTCTLITEM+3,  "FoundrySlider", 0,  154, 55, 100,10
-	CONTROL         "",FIRSTCTLITEM+4,  "FoundrySlider", 0,  154, 70, 100,10
-	CONTROL         "",FIRSTCTLITEM+5,  "FoundrySlider", 0,  154, 85, 100,10
-	CONTROL         "",FIRSTCTLITEM+6,  "FoundrySlider", 0,  154,100, 100,10
-	CONTROL         "",FIRSTCTLITEM+7,  "FoundrySlider", 0,  154,115, 100,10
+	CONTROL         "",FIRSTCTLITEM,    "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 10, 100,10
+	CONTROL         "",FIRSTCTLITEM+1,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 25, 100,10
+	CONTROL         "",FIRSTCTLITEM+2,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 40, 100,10
+	CONTROL         "",FIRSTCTLITEM+3,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 55, 100,10
+	CONTROL         "",FIRSTCTLITEM+4,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 70, 100,10
+	CONTROL         "",FIRSTCTLITEM+5,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 85, 100,10
+	CONTROL         "",FIRSTCTLITEM+6,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 100,10
+	CONTROL         "",FIRSTCTLITEM+7,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 100,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,     269, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,   269, 25, 24,12,  ES_NUMBER|ES_RIGHT
