--- a/ui_win.rc
+++ b/ui_win.rc
@@ -1,7 +1,7 @@
 /*
     This file is part of "Filter Foundry", a filter plugin for Adobe Photoshop
     Copyright (C) 2003-2009 Toby Thain, toby@telegraphics.net
-    Copyright (C) 2018-2022 Daniel Marschall, ViaThinkSoft
+    Copyright (C) 2018-2024 Daniel Marschall, ViaThinkSoft
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -47,8 +47,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
 
-	/* "Preview" is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",            PREVIEWITEM,     "Preview",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
+	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",            PREVIEWITEM,     "1.3.6.1.4.1.37476.2.72.2.2",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
@@ -86,11 +86,11 @@ BEGIN
 	LTEXT           "B =",FIRSTLABELITEM+2,          15,191, 13,12
 	LTEXT           "A =",FIRSTLABELITEM+3,          15,219, 13,12
 
-	/* "Caution" is a subclass of "Button", defined in ui_win.c */
-	CONTROL         "!",FIRSTICONITEM,   "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
-	CONTROL         "!",FIRSTICONITEM+1, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
-	CONTROL         "!",FIRSTICONITEM+2, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
-	CONTROL         "!",FIRSTICONITEM+3, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
+	/* "1.3.6.1.4.1.37476.2.72.2.3" (Caution icon) is a subclass of "Button", defined in ui_win.c */
+	CONTROL         "!",FIRSTICONITEM,   "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
+	CONTROL         "!",FIRSTICONITEM+1, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
+	CONTROL         "!",FIRSTICONITEM+2, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
+	CONTROL         "!",FIRSTICONITEM+3, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
 
 	EDITTEXT        FIRSTEXPRITEM,    35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT        FIRSTEXPRITEM+1,  35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
@@ -112,8 +112,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
 
-	/* "Preview" is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",            PREVIEWITEM,     "Preview",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
+	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",            PREVIEWITEM,     "1.3.6.1.4.1.37476.2.72.2.2",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
@@ -151,11 +151,11 @@ BEGIN
 	LTEXT           "B =",FIRSTLABELITEM+2,          15,191, 13,12
 	LTEXT           "A =",FIRSTLABELITEM+3,          15,219, 13,12
 
-	/* "Caution" is a subclass of "Button", defined in ui_win.c */
-	CONTROL         "!",FIRSTICONITEM,   "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
-	CONTROL         "!",FIRSTICONITEM+1, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
-	CONTROL         "!",FIRSTICONITEM+2, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
-	CONTROL         "!",FIRSTICONITEM+3, "Caution",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
+	/* "1.3.6.1.4.1.37476.2.72.2.3" (Caution icon) is a subclass of "Button", defined in ui_win.c */
+	CONTROL         "!",FIRSTICONITEM,   "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
+	CONTROL         "!",FIRSTICONITEM+1, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
+	CONTROL         "!",FIRSTICONITEM+2, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
+	CONTROL         "!",FIRSTICONITEM+3, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
 
 	EDITTEXT        FIRSTEXPRITEM,    35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT        FIRSTEXPRITEM+1,  35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
@@ -177,8 +177,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
 
-	/* "Preview" is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",           PREVIEWITEM,      "Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
+	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",           PREVIEWITEM,      "1.3.6.1.4.1.37476.2.72.2.2",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
@@ -229,8 +229,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
 
-	/* "Preview" is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",           PREVIEWITEM,      "Preview",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
+	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",           PREVIEWITEM,      "1.3.6.1.4.1.37476.2.72.2.2",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
