--- a/ui_win.rc
+++ b/ui_win.rc
@@ -24,7 +24,9 @@
 
 #include "winuser.h"
 #include "commctrl.h"
+
 #include "ui.h"
+#include "ui_win.h"
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 CAUTION_ICO    ICON   "caution.ico"
@@ -47,8 +49,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
 
-	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",            PREVIEWITEM,     "1.3.6.1.4.1.37476.2.72.2.2",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
+	/* OID_PREVIEW_WNDCLASS (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",            PREVIEWITEM,     OID_PREVIEW_WNDCLASS,  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
@@ -63,14 +65,14 @@ BEGIN
 	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
 	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,                "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,10, 105,10
-	CONTROL         "",FIRSTCTLITEM+1,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,25, 105,10
-	CONTROL         "",FIRSTCTLITEM+2,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,40, 105,10
-	CONTROL         "",FIRSTCTLITEM+3,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,55, 105,10
-	CONTROL         "",FIRSTCTLITEM+4,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,70, 105,10
-	CONTROL         "",FIRSTCTLITEM+5,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,85, 105,10
-	CONTROL         "",FIRSTCTLITEM+6,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 105,10
-	CONTROL         "",FIRSTCTLITEM+7,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 105,10
+	CONTROL         "",FIRSTCTLITEM,                OID_SLIDER_WNDCLASS, 0,  154,10, 105,10
+	CONTROL         "",FIRSTCTLITEM+1,              OID_SLIDER_WNDCLASS, 0,  154,25, 105,10
+	CONTROL         "",FIRSTCTLITEM+2,              OID_SLIDER_WNDCLASS, 0,  154,40, 105,10
+	CONTROL         "",FIRSTCTLITEM+3,              OID_SLIDER_WNDCLASS, 0,  154,55, 105,10
+	CONTROL         "",FIRSTCTLITEM+4,              OID_SLIDER_WNDCLASS, 0,  154,70, 105,10
+	CONTROL         "",FIRSTCTLITEM+5,              OID_SLIDER_WNDCLASS, 0,  154,85, 105,10
+	CONTROL         "",FIRSTCTLITEM+6,              OID_SLIDER_WNDCLASS, 0,  154,100, 105,10
+	CONTROL         "",FIRSTCTLITEM+7,              OID_SLIDER_WNDCLASS, 0,  154,115, 105,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,               273, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,             273, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -86,11 +88,11 @@ BEGIN
 	LTEXT           "B =",FIRSTLABELITEM+2,          15,191, 13,12
 	LTEXT           "A =",FIRSTLABELITEM+3,          15,219, 13,12
 
-	/* "1.3.6.1.4.1.37476.2.72.2.3" (Caution icon) is a subclass of "Button", defined in ui_win.c */
-	CONTROL         "!",FIRSTICONITEM,   "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
-	CONTROL         "!",FIRSTICONITEM+1, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
-	CONTROL         "!",FIRSTICONITEM+2, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
-	CONTROL         "!",FIRSTICONITEM+3, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
+	/* OID_CAUTION_WNDCLASS (Caution icon) is a subclass of "Button", defined in ui_win.c */
+	CONTROL         "!",FIRSTICONITEM,   OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
+	CONTROL         "!",FIRSTICONITEM+1, OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
+	CONTROL         "!",FIRSTICONITEM+2, OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
+	CONTROL         "!",FIRSTICONITEM+3, OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
 
 	EDITTEXT        FIRSTEXPRITEM,    35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT        FIRSTEXPRITEM+1,  35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
@@ -112,8 +114,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",      IDOK,        260, 253, 42, 14
 
-	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",            PREVIEWITEM,     "1.3.6.1.4.1.37476.2.72.2.2",  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
+	/* OID_PREVIEW_WNDCLASS (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",            PREVIEWITEM,     OID_PREVIEW_WNDCLASS,  SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,   15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 102,115, 14,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 14,12
@@ -128,14 +130,14 @@ BEGIN
 	LTEXT           "ctl(6)",FIRSTCTLLABELITEM+6,   129,100, 25,12
 	LTEXT           "ctl(7)",FIRSTCTLLABELITEM+7,   129,115, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,                "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,10, 105,10
-	CONTROL         "",FIRSTCTLITEM+1,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,25, 105,10
-	CONTROL         "",FIRSTCTLITEM+2,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,40, 105,10
-	CONTROL         "",FIRSTCTLITEM+3,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,55, 105,10
-	CONTROL         "",FIRSTCTLITEM+4,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,70, 105,10
-	CONTROL         "",FIRSTCTLITEM+5,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,85, 105,10
-	CONTROL         "",FIRSTCTLITEM+6,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 105,10
-	CONTROL         "",FIRSTCTLITEM+7,              "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 105,10
+	CONTROL         "",FIRSTCTLITEM,                OID_SLIDER_WNDCLASS, 0,  154,10, 105,10
+	CONTROL         "",FIRSTCTLITEM+1,              OID_SLIDER_WNDCLASS, 0,  154,25, 105,10
+	CONTROL         "",FIRSTCTLITEM+2,              OID_SLIDER_WNDCLASS, 0,  154,40, 105,10
+	CONTROL         "",FIRSTCTLITEM+3,              OID_SLIDER_WNDCLASS, 0,  154,55, 105,10
+	CONTROL         "",FIRSTCTLITEM+4,              OID_SLIDER_WNDCLASS, 0,  154,70, 105,10
+	CONTROL         "",FIRSTCTLITEM+5,              OID_SLIDER_WNDCLASS, 0,  154,85, 105,10
+	CONTROL         "",FIRSTCTLITEM+6,              OID_SLIDER_WNDCLASS, 0,  154,100, 105,10
+	CONTROL         "",FIRSTCTLITEM+7,              OID_SLIDER_WNDCLASS, 0,  154,115, 105,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,               273, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,             273, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -151,11 +153,11 @@ BEGIN
 	LTEXT           "B =",FIRSTLABELITEM+2,          15,191, 13,12
 	LTEXT           "A =",FIRSTLABELITEM+3,          15,219, 13,12
 
-	/* "1.3.6.1.4.1.37476.2.72.2.3" (Caution icon) is a subclass of "Button", defined in ui_win.c */
-	CONTROL         "!",FIRSTICONITEM,   "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
-	CONTROL         "!",FIRSTICONITEM+1, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
-	CONTROL         "!",FIRSTICONITEM+2, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
-	CONTROL         "!",FIRSTICONITEM+3, "1.3.6.1.4.1.37476.2.72.2.3",BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
+	/* OID_CAUTION_WNDCLASS (Caution icon) is a subclass of "Button", defined in ui_win.c */
+	CONTROL         "!",FIRSTICONITEM,   OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,147, 16,16
+	CONTROL         "!",FIRSTICONITEM+1, OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,175, 16,16
+	CONTROL         "!",FIRSTICONITEM+2, OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,203, 16,16
+	CONTROL         "!",FIRSTICONITEM+3, OID_CAUTION_WNDCLASS,BS_PUSHBUTTON | BS_CENTER | BS_FLAT | BS_OWNERDRAW | WS_CHILD | WS_CLIPSIBLINGS,  15,231, 16,16
 
 	EDITTEXT        FIRSTEXPRITEM,    35,135, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
 	EDITTEXT        FIRSTEXPRITEM+1,  35,163, 262, 24, ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN|WS_VSCROLL
@@ -177,8 +179,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
 
-	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",           PREVIEWITEM,      "1.3.6.1.4.1.37476.2.72.2.2",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
+	/* OID_PREVIEW_WNDCLASS (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",           PREVIEWITEM,      OID_PREVIEW_WNDCLASS,SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
@@ -198,14 +200,14 @@ BEGIN
 	LTEXT           "map(2)",FIRSTMAPLABELITEM+2,   129, 78, 25,12
 	LTEXT           "map(3)",FIRSTMAPLABELITEM+3,   129,108, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,    "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 10, 100,10
-	CONTROL         "",FIRSTCTLITEM+1,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 25, 100,10
-	CONTROL         "",FIRSTCTLITEM+2,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 40, 100,10
-	CONTROL         "",FIRSTCTLITEM+3,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 55, 100,10
-	CONTROL         "",FIRSTCTLITEM+4,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 70, 100,10
-	CONTROL         "",FIRSTCTLITEM+5,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 85, 100,10
-	CONTROL         "",FIRSTCTLITEM+6,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 100,10
-	CONTROL         "",FIRSTCTLITEM+7,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 100,10
+	CONTROL         "",FIRSTCTLITEM,    OID_SLIDER_WNDCLASS, 0,  154, 10, 100,10
+	CONTROL         "",FIRSTCTLITEM+1,  OID_SLIDER_WNDCLASS, 0,  154, 25, 100,10
+	CONTROL         "",FIRSTCTLITEM+2,  OID_SLIDER_WNDCLASS, 0,  154, 40, 100,10
+	CONTROL         "",FIRSTCTLITEM+3,  OID_SLIDER_WNDCLASS, 0,  154, 55, 100,10
+	CONTROL         "",FIRSTCTLITEM+4,  OID_SLIDER_WNDCLASS, 0,  154, 70, 100,10
+	CONTROL         "",FIRSTCTLITEM+5,  OID_SLIDER_WNDCLASS, 0,  154, 85, 100,10
+	CONTROL         "",FIRSTCTLITEM+6,  OID_SLIDER_WNDCLASS, 0,  154,100, 100,10
+	CONTROL         "",FIRSTCTLITEM+7,  OID_SLIDER_WNDCLASS, 0,  154,115, 100,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,     269, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,   269, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -229,8 +231,8 @@ FONT 8, "MS Sans Serif"
 BEGIN
 	DEFPUSHBUTTON   "OK",     IDOK,               256,137,  42,14
 
-	/* "1.3.6.1.4.1.37476.2.72.2.2" (Preview) is a subclass of "Static", defined in ui_win.c */
-	CONTROL         "",           PREVIEWITEM,      "1.3.6.1.4.1.37476.2.72.2.2",SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
+	/* OID_PREVIEW_WNDCLASS (Preview) is a subclass of "Static", defined in ui_win.c */
+	CONTROL         "",           PREVIEWITEM,      OID_PREVIEW_WNDCLASS,SS_OWNERDRAW|SS_NOTIFY|SS_SUNKEN,     15,10, 100,100
 
 	CONTROL         "+", ZOOMINITEM,      "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 103,115, 12,12
 	CONTROL         "-", ZOOMOUTITEM,     "Button",   BS_PUSHBUTTON | BS_CENTER | BS_FLAT | WS_CHILD | WS_VISIBLE, 15,115, 12,12
@@ -250,14 +252,14 @@ BEGIN
 	LTEXT           "map(2)",FIRSTMAPLABELITEM+2,   129, 78, 25,12
 	LTEXT           "map(3)",FIRSTMAPLABELITEM+3,   129,108, 25,12
 
-	CONTROL         "",FIRSTCTLITEM,    "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 10, 100,10
-	CONTROL         "",FIRSTCTLITEM+1,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 25, 100,10
-	CONTROL         "",FIRSTCTLITEM+2,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 40, 100,10
-	CONTROL         "",FIRSTCTLITEM+3,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 55, 100,10
-	CONTROL         "",FIRSTCTLITEM+4,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 70, 100,10
-	CONTROL         "",FIRSTCTLITEM+5,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154, 85, 100,10
-	CONTROL         "",FIRSTCTLITEM+6,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,100, 100,10
-	CONTROL         "",FIRSTCTLITEM+7,  "1.3.6.1.4.1.37476.2.72.2.1", 0,  154,115, 100,10
+	CONTROL         "",FIRSTCTLITEM,    OID_SLIDER_WNDCLASS, 0,  154, 10, 100,10
+	CONTROL         "",FIRSTCTLITEM+1,  OID_SLIDER_WNDCLASS, 0,  154, 25, 100,10
+	CONTROL         "",FIRSTCTLITEM+2,  OID_SLIDER_WNDCLASS, 0,  154, 40, 100,10
+	CONTROL         "",FIRSTCTLITEM+3,  OID_SLIDER_WNDCLASS, 0,  154, 55, 100,10
+	CONTROL         "",FIRSTCTLITEM+4,  OID_SLIDER_WNDCLASS, 0,  154, 70, 100,10
+	CONTROL         "",FIRSTCTLITEM+5,  OID_SLIDER_WNDCLASS, 0,  154, 85, 100,10
+	CONTROL         "",FIRSTCTLITEM+6,  OID_SLIDER_WNDCLASS, 0,  154,100, 100,10
+	CONTROL         "",FIRSTCTLITEM+7,  OID_SLIDER_WNDCLASS, 0,  154,115, 100,10
 
 	EDITTEXT        FIRSTCTLTEXTITEM,     269, 10, 24,12,  ES_NUMBER|ES_RIGHT
 	EDITTEXT        FIRSTCTLTEXTITEM+1,   269, 25, 24,12,  ES_NUMBER|ES_RIGHT
@@ -369,10 +371,10 @@ BEGIN
 
 	CHECKBOX        "Filter schützen",PROTECTITEM,  10,219,   67,12
 
-	LTEXT           "Kategorie:",  100,        10,10, 35,12
+	LTEXT           "Kategorie:", 100,        10,10, 35,12
 	LTEXT           "Titel:",     101,        10,25, 35,12
 	LTEXT           "Copyright:", 102,        10,40, 35,12
-	LTEXT           "Autor:",    103,        10,67, 35,12
+	LTEXT           "Autor:",     103,        10,67, 35,12
 
 	PUSHBUTTON      "Abbrechen", IDCANCEL,     106,219, 42,14
 END
