--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -65,7 +65,8 @@ VENDORID, LC(m,s,3,2), NULLID, 8L, 2000000L, 2000000L,
 VENDORID, LC(f,l,l,y), NULLID, 4L, 0x80L,
 
 /* Enable info */
-/* Note: Length 272 must be divisible by 4, otherwise it must be padded with zeros */
+/* Note: The string must at least contain one zero terminated character. The length 272 of the string */
+/* (including zero terminated padding) must be divisible by 4, otherwise it must be padded with zeros */
 /* "Plug-in Resource Guide.pdf", pages 61-62 */
 VENDORID, LC(e,n,b,l), NULLID, 272L, "in (PSHOP_ImageMode, GrayScaleMode, RGBMode, CMYKMode, HSLMode, HSBMode, MultichannelMode, DuotoneMode, LabMode, Gray16Mode, RGB48Mode, Lab48Mode, CMYK64Mode, DeepMultichannelMode, Duotone16Mode, RGB96Mode, Gray32Mode) || PSHOP_ImageDepth == 16 || PSHOP_ImageDepth == 32\0\0",
 
