Fix crash in olddoc with 16/32-bit color space
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@593 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/PiPL_body.rc
+++ b/PiPL_body.rc
@@ -44,14 +44,14 @@ VENDORID, LC(m,o,d,e), NULLID, 4L, /* 1st & 2nd byte: */ noBitmap| /* Even if do
                                                          doesSupportMultichannel|
                                                          doesSupportDuotone|
                                                          doesSupportLABColor|
-                                                         doesSupportGray16|
-                                                         doesSupportRGB48|
-                                                         doesSupportLab48|
-                                                         doesSupportCMYK64|
-                                                         doesSupportDeepMultichannel|
-                                                         doesSupportDuotone16,
-                                   /* 3rd & 4th byte: */ doesSupportRGB96|
-                                                         doesSupportGray32,
+                                                         doesSupportGray16|           /* undocumented! */
+                                                         doesSupportRGB48|            /* undocumented! */
+                                                         doesSupportLab48|            /* undocumented! */
+                                                         doesSupportCMYK64|           /* undocumented! */
+                                                         doesSupportDeepMultichannel| /* undocumented! */
+                                                         doesSupportDuotone16,        /* undocumented! */
+                                   /* 3rd & 4th byte: */ doesSupportRGB96|            /* undocumented! */
+                                                         doesSupportGray32,           /* undocumented! */
 
 /* We need this to enable the plugin for BigDocuments */
 VENDORID, LC(m,s,3,2), NULLID, 8L, 2000000L, 2000000L,
